printing: Set new print operation settings before emitting custom-widget-apply signal

So that custom settings can be added from the custom-widget-apply
callback.

https://bugzilla.gnome.org/show_bug.cgi?id=637069